# libfreenect

./: README.Android
examples/: CMakeLists.txt  micview.c
src/: CMakeLists.txt
wrappers/c_sync/: CMakeLists.txt
wrappers/cpp/: CMakeLists.txt
